Fixing sort direction arrow alignment

--- a/frontend/src/components/SortEditor/SortItem.module.scss
+++ b/frontend/src/components/SortEditor/SortItem.module.scss
@@ -27,7 +27,6 @@
 
   .directionToggle {
     display: flex;
-    align-items: center;
     justify-content: center;
     background: none;
     border: none;
